user-apps/development/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        # Added for Cilium network policies
        netpol.cilium.io/egress-to-cnpg-db: "true"
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.13.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data-pvc
