user-apps/development/pgadmin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Management
    gethomepage.dev/name: PgAdmin
    gethomepage.dev/icon: https://raw.githubusercontent.com/pgadmin-org/pgadmin4/refs/heads/master/docs/en_US/images/logo-128.png
    gethomepage.dev/href: https://pgadmin.tamhomelab.com
    gethomepage.dev/description: DB Management
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "pgadmin.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pgadmin
          port: 80
          weight: 1
